less: Stop top banner for overflowing
close #758

--- a/less/egophobe.less
+++ b/less/egophobe.less
@@ -127,5 +127,5 @@ b#sync-counter {
 }
 
 .banner-float svg {
-	margin: .05em 0 0.05em 0;
+	padding: .05em 0 0.05em 0;
 }
