--- a/less/inumi.less
+++ b/less/inumi.less
@@ -98,12 +98,6 @@ article.preview.editing {
 
 #banner {
     background: rgb(66, 55, 86);
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-    height: 1.5em;
-    top: 0;
-    left: 0;
 }
 
 #threads:not(.custom-BG) section > article.op {
