--- a/less/overlays.mix.less
+++ b/less/overlays.mix.less
@@ -54,12 +54,33 @@
 }
 
 #banner {
-	display: inline-block;
-	text-align: center;
+	display: flex;
+	flex-wrap: nowrap;
 	width: 100%;
 	height: 1.3em;
 	top: 0;
 	left: 0;
+	margin: 0;
+	padding: 0;
+	* {
+		white-space: nowrap;
+	}
+}
+
+.banner-float {
+	font-weight: bold;
+	padding: 0 0.15em 0 0.15em;
+	svg {
+		width: 1em;
+		height: 1em;
+	}
+}
+
+#banner-center {
+    margin-left: auto;
+    margin-right: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .side-panel {
@@ -91,16 +112,6 @@
 #right-panel, #right-spacer {
 	right: 0;
 	margin-right: 0;
-}
-
-.banner-float {
-	font-weight: bold;
-	float: right;
-	margin: 0 0.15em 0 0.15em;
-	svg {
-		width: 1em;
-		height: 1em;
-	}
 }
 
 #board-navigation {
